# SmartDarts_v2

./: .gitignore  Cyberdine_8x12_schema.cddx  Cyberdine_8x12_schema.txt  LICENCE  README.md  pyproject.toml  run.py  sim_cli.py
.github/workflows/: python-app.yml
src/: app.py  main.py  models.py  utils.py
src/SBC/: _protocol.py
src/SBC/gpio_handlers/: mock_handler.py  rpi_handler.py
src/blueprints/dartboard/: configurator.py  dartboard.py
src/blueprints/dartboard/templates/: _new_dartboard_modal.html  dartboard_index.html
src/blueprints/game/: game.py
src/blueprints/game_routes/: game.py
src/blueprints/game_routes/tests/: test_game.py
src/dartboard/: _protocol.py  board.py  config.py
src/game/: game.py  game_engine.py  game_modes.py  options.py  players.py  states.py
src/game/games/: X01.py  cricket.py
src/game/rules/: X01.py
src/game/tests/: test_game_engine.py
src/game_logic/: enums.py  game_engine.py  game_modes.py  players.py
src/game_logic/tests/: test_game_engine.py
src/hardware_components/dartboard/: _protocol.py  board.py
src/routes/api/: __init__.py  game.py
src/routes/api/tests/: test_game.py
src/routes/view/dartboard/: dartboard.py
src/routes/views/: __init__.py
src/routes/views/dartboard_conf_view/: configurator.py
src/routes/views/dartboard_conf_view/templates/: dartboard_index.html
src/routes/views/game/: game_view.py
src/static/: canvas.js  socketio.min.js  ws.js
src/templates/: _login_modal.html  _register_modal.html  dartboard.html  index.html  layout.html  navbar.html
(+6 files in other folders)
