[project]
name = "smartdarts-v2-sbc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "flask-wtf>=1.2.2",
    "gunicorn>=23.0.0",
    "markdown>=3.7",
    "pydantic>=2.10.5",
    "requests>=2.32.3",
]

[project.optional-dependencies]
test = [
    "pytest>=8.3.4",
]
rpi = [
    "rpi-gpio>=0.7.1",
]
